--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.23"
   },
   "devDependencies": {
+    "daisyui": "^4.12.23",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
