--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.23"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "daisyui": "^4.12.23",
