--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
     "zod": "^3.24.1"
   },
