--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.10.6",
+    "chart.js": "^4.4.7",
     "mongoose": "^8.9.5",
     "next": "14.2.23",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
